--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </article>
           <br />
           <section class="description">
-            <h4>Our Equilibrium collection promotes balance and calm.</h4>
+            <p>Our Equilibrium collection promotes balance and calm.</p>
           </section>
           <div class="crypto">
             <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
